chore: update AGENTS.md files with testing instructions and known issues